# FPGA-QLDPC-decoder

./: .gitignore  2026-04-25-neutral-atom-qldpc-decoder-aware-extraction-design.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-25-neutral-atom-qldpc-decoder-aware-extraction.md
src/baselines/: bp_decoder.py
src/compiler/: extraction_compiler.py  fault_atom.py  hardware_cost.py  residual_graph.py
src/fpga/: atom_matcher.py  pipeline.py  residual_engine.py
src/qldpc/: codes.py  geometry.py  schedule.py
src/qldpc_decoder_codesign.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/search/: candidate.py  scorer.py  search_loop.py
tests/: test_baselines.py  test_codes.py  test_extraction_compiler.py  test_fault_atom.py  test_geometry.py  test_hardware_cost.py  test_integration.py  test_pipeline.py  test_residual_graph.py  test_schedule.py  test_scorer.py  test_search_loop.py
